Fix Game Over buttons on mobile

--- a/styles/game-over.module.scss
+++ b/styles/game-over.module.scss
@@ -39,6 +39,9 @@
 
   .buttons {
     display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: center;
 
     > button {
       &:not(:last-child) {
